Bug 321286 - When selecting a file by typing its name, filename matching stops when an underscore is typed.
Summary: When selecting a file by typing its name, filename matching stops when an und...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-17 17:59 UTC by phopedush
Modified: 2013-06-20 17:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description phopedush 2013-06-17 17:59:47 UTC
When browsing files in the file pane (either details, compact, or icon mode), one can begin to select the file they want by starting to type its name. However, if a filename with an underscore is typed, matching ceases at that point. For example, If i have two directories called:

core_aaa
core_bbb

and start typing "core_a...", the selected file will remain on "core_aaa".

Notably, typing a file or directory name into the address bar does not exhibit this behavior.

Reproducible: Always

Steps to Reproduce:
1. Create two directories with identical prefixes followed by an underscore, and differing suffixes
2. Attempt to select the file with the second name (alphabetically).
3. Observe that dolphin begins to ignore keystrokes as soon as the underscore is typed.
Actual Results:  
The selection remained on the first directory, and all keystrokes after the underscore were ignored.

Expected Results:  
The selection should continue to select the appropriate directory after the underscore is typed.
Comment 1 phopedush 2013-06-17 18:03:58 UTC
Whoops, I made a typo up in the description. The line that read

and start typing "core_a...", the selected file will remain on "core_aaa".

should read:

and start typing "core_b...", the selected file will remain on "core_aaa".
Comment 2 Frank Reininghaus 2013-06-18 16:22:05 UTC
Thanks for the bug report! I can confirm the problem. Proposed fix at

https://git.reviewboard.kde.org/r/111102/
Comment 3 Frank Reininghaus 2013-06-20 17:33:53 UTC
Git commit e401d892955bb00bfd3daf77447fa808f9f1a907 by Frank Reininghaus.
Committed on 20/06/2013 at 17:32.
Pushed by freininghaus into branch 'master'.

Make it possible to select files like "a_b" using keyboard search

The problem was that pressing the Shift key would reset the keyboard
search.
FIXED-IN: 4.11.0
REVIEW: 111102

M  +1    -1    dolphin/src/kitemviews/private/kitemlistkeyboardsearchmanager.cpp
M  +28   -1    dolphin/src/tests/kitemlistkeyboardsearchmanagertest.cpp

http://commits.kde.org/kde-baseapps/e401d892955bb00bfd3daf77447fa808f9f1a907